@@ -1,3 +1,15 @@
+2011-10-06  Dan Bernstein  <mitz@apple.com>
+
+        <rdar://problem/10232866> Assertion failure beneath blockSelectionGaps() when a selected node is removed
+
+        Reviewed by Ryosuke Niwa.
+
+        Test: editing/selection/invalid-in-RenderView.html
+
+        * editing/FrameSelection.cpp:
+        (WebCore::FrameSelection::updateAppearance): Ensure that the VisibleSelection used to set the selection
+        in the RenderView is valid, by reconstructing it from the current selection.
+
 2011-10-06  Andreas Kling  <kling@webkit.org>
 
         InlineBox's virtualLogicalHeight() partially limited to builds with SVG.
