@@ -1,3 +1,12 @@
+2011-10-06  Dan Bernstein  <mitz@apple.com>
+
+        <rdar://problem/10232866> Assertion failure beneath blockSelectionGaps() when a selected node is removed
+
+        Reviewed by Ryosuke Niwa.
+
+        * editing/selection/invalid-in-RenderView-expected.txt: Added.
+        * editing/selection/invalid-in-RenderView.html: Added.
+
 2011-10-06  Alejandro G. Castro  <alex@igalia.com>
 
         [WK2] [GTK] Add Skipped file for Webkit2 test runner
